@@ -1,5 +1,10 @@
 2008-03-02  Mirco Bauer <meebey@meebey.net> 
 
+	* Protocols/Irc/IrcProtocolManager.cs: Trim trailing spaces in commands that
+	  use space as separator (like op/deop).
+
+2008-03-02  Mirco Bauer <meebey@meebey.net> 
+
 	* Protocols/Irc/IrcProtocolManager.cs: Reply error message when channel is
 	  moderated.
 
